[project]
name = "bud-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "Marco Aurélio Prado",email = "marco.pdsv@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "arguably (>=1.3.0,<2.0.0)",
    "openai (>=1.0.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]

[project.scripts]
bud-learning = "bud_learning.cli:arguably.run"

[tool.poetry]
packages = [{include = "bud_learning", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
